Fix: remove duplicate transform property in hero section and add spacing in preloader

--- a/assets/scss/components/_hero-section.scss
+++ b/assets/scss/components/_hero-section.scss
@@ -82,7 +82,6 @@
       top: -55px;
       left: 50%;
       transform: translateX(-50%);
-      transform: translateX(-50%);
       z-index: -1;
       height: 150px;
       animation: move-left 5s infinite linear;
